--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
-							<p>&copy; Challenge The Bias: <a href="https://html5up.net">challengethebias.org</a></p>
+							<p>&copy; Challenge The Bias: <a href="https://challengethebias.github.io">challengethebias.github.io</a></p>
 						</div>
 					</footer>
 
